fix disabled scrollbar on windows, fix load more posts padding, wording load new posts => Updates laden, remove edited by label

--- a/less/embed.less
+++ b/less/embed.less
@@ -9,7 +9,6 @@
     max-width: 680px;
     margin: 0 auto;
     margin-top: 30px;
-    overflow-y: scroll;
     overflow-x: hidden;
     padding-bottom: 200px;
     transition: opacity .35s ease-in-out;
@@ -183,7 +182,7 @@
     position: relative;
     border: 0px;
     box-shadow: inset 1px 1px 4px rgba(0, 0, 0, 0.12);
-    background-color: #81D993;
+    background-color: #6bc87e;
     color: #ffffff;
 }
 
@@ -357,7 +356,7 @@ article.lb-post:after {
     text-align: center;
     color: #5ea9c8;
     cursor: pointer;
-    padding: 6px 14px;
+    padding: 4px 14px;
     background-color: #81D993;
     color: #fff;
     border: 0;
@@ -374,6 +373,7 @@ article.lb-post:after {
     position: absolute;
     left: 50%;
     margin-left: -55px;
+    padding: 6px 14px;
     width: 110px;
     margin-top: 60px;
 }
@@ -680,7 +680,7 @@ article.lb-post:after {
     .load-new-posts {
         margin-top: 26px;
         font-size: .8em;
-        padding: 4px 10px;
+        padding: 2px 10px;
         right: 15px;
     }
 
